Implement simple pseudo mutator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(pgc
                src/pgc.cpp
                src/cell.cpp
-               src/allocator.cpp)
+               src/allocator.cpp
+               src/pseudo-mutator.cpp)
 
 
 target_include_directories(pgc PRIVATE src)
